Fix scaling on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,8 @@ body {
 .text-editor-wrap {
 	display: block;
 	margin: auto;
-	max-width: 1000px;
+	min-width: 900px;
+	max-width: 900px;
 	border-radius: 10px;
 	box-shadow: rgba(0, 0, 0, 0.8) 0px 20px 70px;
 	clear: both;
